--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>IRBABUL SALAS</title>
-		<link rel="stylesheet" href="style.css"/>
+		<link rel="stylesheet" href="index.css"/>
 	</head>
 	<body>
 		<header>
