--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="intro">
 				<p class="title">Hello, muhammad irbabul salas here!</p>
 				<p class="description">Technology Influencer from village.</p>
-				<img src="C:\Users\lenovo\Desktop\web pertamar\assets\iir-1.jpeg" alt="iir 1" class="img-foto"/>
+				<img src="index\iir-1.jpeg" alt="iir 1" class="img-foto"/>
 			</div>
 		</div>
 		<div class="parallax">
@@ -40,17 +40,17 @@
 			<div class="container"> 
 				<div class="card" id="tentang">
 					<div class="card-item">
-						<img src="C:\Users\lenovo\Desktop\web pertamar\assets\EFootball_logo.svg.png" alt="icon 1" class="icon">
+						<img src="index\EFootball_logo.svg.png" alt="icon 1" class="icon">
 						<p class="card-title">Akun efootball</p>
 						<p class="card-description">Adu skill, klik untuk by one.</p>
 					</div>
 					<div class="card-item">
-					<img src="C:\Users\lenovo\Desktop\web pertamar\assets\mlbb.png" alt="icon 2" class="icon"  onclick="redirWhatsapp()">
+					<img src="index\mlbb.png" alt="icon 2" class="icon"  onclick="redirWhatsapp()">
 						<p class="card-title">Akun Mobile Legend</p>
 						<p class="card-description">User Lylia, klik untuk by one.</p>
 					</div>
 					<div class="card-item">
-					<img src="C:\Users\lenovo\Desktop\web pertamar\assets\stumble-removebg-preview.png" alt="icon 3" class="icon">
+					<img src="index\stumble-removebg-preview.png" alt="icon 3" class="icon">
 						<p class="card-title">Akun Stumble</p>
 						<p class="card-description">masih pemula, klik untuk mabar.</p>
 					</div>
