--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="intro">
 				<p class="title">Hello, muhammad irbabul salas here!</p>
 				<p class="description">Technology Influencer from village.</p>
-				<img src="index\iir-1.jpeg" alt="iir 1" class="img-foto"/>
+				<img src="iir-1.jpeg" alt="iir 1" class="img-foto"/>
 			</div>
 		</div>
 		<div class="parallax">
