--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 		<div class=logo>
-			<img src="C:\Users\lenovo\Desktop\web pertamar\assets\images-removebg-preview.png" class="logo-img"/>
+			<img src="images-removebg-preview.png" class="logo-img"/>
 			<h1 class="logo-title">LAST</h1>
 		</div>
 			
@@ -40,17 +40,17 @@
 			<div class="container"> 
 				<div class="card" id="tentang">
 					<div class="card-item">
-						<img src="index\EFootball_logo.svg.png" alt="icon 1" class="icon">
+						<img src="EFootball_logo.svg.png" alt="icon 1" class="icon">
 						<p class="card-title">Akun efootball</p>
 						<p class="card-description">Adu skill, klik untuk by one.</p>
 					</div>
 					<div class="card-item">
-					<img src="index\mlbb.png" alt="icon 2" class="icon"  onclick="redirWhatsapp()">
+					<img src="mlbb.png" alt="icon 2" class="icon"  onclick="redirWhatsapp()">
 						<p class="card-title">Akun Mobile Legend</p>
 						<p class="card-description">User Lylia, klik untuk by one.</p>
 					</div>
 					<div class="card-item">
-					<img src="index\stumble-removebg-preview.png" alt="icon 3" class="icon">
+					<img src="stumble-removebg-preview.png" alt="icon 3" class="icon">
 						<p class="card-title">Akun Stumble</p>
 						<p class="card-description">masih pemula, klik untuk mabar.</p>
 					</div>
