--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 		<div class=logo>
-			<img src="index/logo.png" class="logo-img"/>
+			<img src="logo.png" class="logo-img"/>
 			<h1 class="logo-title">LAST</h1>
 		</div>
 			
